--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,50 @@
-.title{
-  font-weight: 900;
-  color: darkorange;
+.firstBlog{
+    width: 48%;
+    height: auto;
+    background-color: gray;
+    margin-left: 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+    float: left;
 }
+
+.elem{
+    margin: 20px 20px;
+    font-weight: 900;
+}
+
+img{
+    width: 48%;
+    height: 490px;
+    float: right;
+    border-radius: 10px;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+
+input{
+    margin-top: 50px;
+    border: 3px solid black;
+    padding: 10px;
+    font-size: 15px;
+}
+
+textarea{
+    margin-left: 655px;
+    border: 3px solid black;
+    font-size: 13px;
+}
+
+.comment{
+    margin-left: 655px;
+}
+
+button{
+    margin-left: 655px;
+    padding: 5px;
+    width: 200px;
+    border: 2px solid black;
+    font-size: 15px;
+}
+
 
