--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,103 @@
-.firstBlog{
-    width: 48%;
-    height: auto;
-    background-color: gray;
-    margin-left: 20px;
-    margin-top: 20px;
-    border-radius: 10px;
-    float: left;
+.title {
+    text-align: center;
+    color: saddlebrown;
+    font-family: cursive;
 }
 
-.elem{
-    margin: 20px 20px;
+.Flex{
+    display: flex;
+    background-color: darkgrey;
+    border-radius: 20px;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    max-width: 60%;
+    padding: 10px 35px;
+}
+
+.picture{
+    display: flex;
+    flex-direction: column;
+    max-width: 40%;
+    /*background-size: cover;*/
+    padding: 5px 20px;
+    margin-top: 20px;
+}
+
+.firstComment{
+    display: flex;
+    padding: 15px 20px;
+}
+
+.secondComment{
+    display: flex;
+    padding: 15px 20px;
+}
+
+.img{
+    float: right;
+    margin: 0 5px;
+}
+
+.range{
+    height: 2px;
+    background-color: darkgrey;
+    border: none;
+}
+
+.leaveComment{
+    margin-left: 25px;
+    font-size: 20px;
+}
+
+.line{
+    border-left: 2px solid red;
+    height: auto;
+}
+
+.commentIns{
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+    border-left: 2px solid black;
+    padding: 10px;
+}
+
+.commentKeep{
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    border-bottom: 2px ridge black;
+    padding: 10px;
+}
+
+.name{
+    width: 30%;
+    padding: 8px;
+    font-size: 17px;
     font-weight: 900;
 }
 
-img{
-    width: 48%;
-    height: 490px;
-    float: right;
-    border-radius: 10px;
-    margin-right: 20px;
-    margin-top: 20px;
-}
-
-input{
-    margin-top: 50px;
-    border: 3px solid black;
-    padding: 10px;
-    font-size: 15px;
-}
-
-textarea{
-    margin-left: 655px;
-    border: 3px solid black;
-    font-size: 13px;
-}
-
 .comment{
-    margin-left: 655px;
-}
-
-button{
-    margin-left: 655px;
-    padding: 5px;
-    width: 200px;
-    border: 2px solid black;
+    width: 30%;
+    padding: 15px;
+    margin-top: 10px;
     font-size: 15px;
+    font-weight: 800;
 }
 
+.btn{
+    width: 20%;
+    color: white;
+    background-color: black;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+}
 
+.desc{
+    font-size: 16px;
+    font-weight: 900;
+}
