--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
+.title {
   text-align: center;
+  color: saddlebrown;
+  font-family: cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Flex{
+  display: flex;
+  background-color: darkgrey;
+  border-radius: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.text{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  max-width: 60%;
+  padding: 10px 35px;
+}
+
+.picture{
+  display: flex;
+  flex-direction: column;
+  max-width: 40%;
+  /*background-size: cover;*/
+  padding: 5px 20px;
+  margin-top: 20px;
+}
+
+.firstComment{
+  display: flex;
+  padding: 15px 20px;
+}
+
+.secondComment{
+  display: flex;
+  padding: 15px 20px;
+}
+
+.img{
+  float: right;
+  margin: 0 5px;
+}
+
+.range{
+  height: 2px;
+  background-color: darkgrey;
+  border: none;
+}
+
+.leaveComment{
+  margin-left: 25px;
+  font-size: 20px;
+}
+
+.line{
+  border-top: 2px solid darkgray;
+  width: 100%;
+}
+
+.commentIns{
+  display: flex;
+  flex-direction: column;
+  width: 15%;
+  border-left: 2px solid black;
+  padding: 10px;
+}
+
+.commentKeep{
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  border-bottom: 2px ridge black;
+  padding: 10px;
+}
+
+.name{
+  width: 30%;
+  padding: 8px;
+  font-size: 17px;
+  font-weight: 900;
+}
+
+.comment{
+  width: 30%;
+  padding: 15px;
+  margin-top: 10px;
+  font-size: 15px;
+  font-weight: 800;
+}
+
+.btn{
+  width: 20%;
   color: white;
+  background-color: black;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.desc{
+  font-size: 16px;
+  font-weight: 900;
 }
