--- a/src/component/FirstSection/FirstSection.module.css
+++ b/src/component/FirstSection/FirstSection.module.css
@@ -1,7 +1,7 @@
 .container{
     position: absolute;
     width: 100%;
-    height: auto;
+    /*height: auto;*/
 }
 
 .elem{
@@ -9,7 +9,7 @@
     top: 50px;
     left: 55px;
     width: 20%;
-    height: auto;
+    /*height: auto;*/
 }
 
 .new{
